# ABS

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  execute_policy.py  pyproject.toml  synthesize_policy.py
.github/: copilot-instructions.md
ABS/: abstraction.cpp  mainABS.cpp
VAL/: pddl+.lex.yy.h
