[project]
name = "abs"
version = "0.1.0"
description = ""
dynamic = ["version"]
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyperplan (>=2.1,<3.0)"
]

[tool.poetry]
package-mode = false
version  = "0.0.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
